--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   # PHP Application
   php:
-    image: php:8.2-apache
+    build: '.'
     ports:
       - "8180:80"
     volumes:
