--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,7 @@
 RewriteEngine On
-RewriteRule .* public/index.php
+
+RewriteCond %{DOCUMENT_ROOT}/public%{REQUEST_URI} -f
+RewriteRule ^ public%{REQUEST_URI} [L]
+
+RewriteCond %{REQUEST_URI} !^/public/
+RewriteRule ^ index.php [QSA,L]
