--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,9 @@
         "psr-4": {
             "App\\": "App/"
         }
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.5",
+      "ext-pdo": "*"
     }
 }
