--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "vlucas/phpdotenv": "^5.5",
       "ext-pdo": "*",
-        "phpmailer/phpmailer": "^6.8"
+        "phpmailer/phpmailer": "^6.8",
+      "ext-fileinfo": "*"
     }
 }
