--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     },
     "require": {
+        "php": "8.2",
         "vlucas/phpdotenv": "^5.5",
       "ext-pdo": "*",
         "phpmailer/phpmailer": "^6.8",
