--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         }
     },
     "require": {
-        "php": "8.2",
         "vlucas/phpdotenv": "^5.5",
       "ext-pdo": "*",
         "phpmailer/phpmailer": "^6.8",
       "ext-fileinfo": "*"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.40"
     }
 }
