--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,8 @@
-DB_DSN = mysql:host=localhost;port=3306;dbname=blog3 lotissement le chatet
+DB_DSN = mysql:host=localhost;port=3306;dbname=blog3
 DB_USER = root
 DB_PASSWORD = root
+
+GMAIL_HOST =
+GMAIL_PORT =
+GMAIL_USER =
+GMAIL_PASSWORD =
