--- a/qodana.yaml
+++ b/qodana.yaml
@@ -37,3 +37,75 @@ include:
   - name: PhpDynamicFieldDeclarationInspection
   - name: PhpUnusedAliasInspection
   - name: PhpUnusedLocalVariableInspection
+  - name: PhpIllegalPsrClassPathInspection
+  - name: PhpUnhandledExceptionInspection
+  - name: PhpUnusedParameterInspection
+  - name: HtmlFormInputWithoutLabel
+  - name: HtmlRequiredAltAttribute
+  - name: HtmlRequiredLangAttribute
+  - name: ReplaceAssignmentWithOperatorAssignmentJS
+  - name: AssignmentToFunctionParameterJS
+  - name: JSAssignmentUsedAsCondition
+  - name: NestedAssignmentJS
+  - name: AssignmentResultUsedJS
+  - name: SillyAssignmentJS
+  - name: PhpOverridingMethodVisibilityInspection
+  - name: PhpReturnValueOfMethodIsNeverUsedInspection
+  - name: PhpMethodParametersCountMismatchInspection
+  - name: PhpPointlessBooleanExpressionInConditionInspection
+  - name: PhpPrivateFieldCanBeLocalVariableInspection
+  - name: PhpUnnecessaryBoolCastInspection
+  - name: PhpUnnecessaryStringCastInspection
+  - name: PhpRedundantMethodOverrideInspection
+  - name: PhpUnnecessarySemicolonInspection
+  - name: PhpGetClassCanBeReplacedWithClassNameLiteralInspection
+  - name: PhpClosureCanBeConvertedToShortArrowFunctionInspection
+  - name: PhpDefineCanBeReplacedWithConstInspection
+  - name: PhpMethodMayBeStaticInspection
+  - name: PhpCombineMultipleIssetCallsIntoOneInspection
+  - name: PhpMultipleClassesDeclarationsInOneFile
+  - name: PhpNamedArgumentsWithChangedOrderInspection
+  - name: PhpNullSafeOperatorCanBeUsedInspection
+  - name: PhpConstructorStyleInspection
+  - name: PhpRedundantClosingTagInspection
+  - name: PhpShortOpenEchoTagInspection
+  - name: PhpShortOpenTagInspection
+  - name: PhpSingleStatementWithBracesInspection
+  - name: PhpTraditionalSyntaxArrayLiteralInspection
+  - name: PhpUnnecessaryCurlyVarSyntaxInspection
+  - name: PhpUnnecessaryDoubleQuotesInspection
+  - name: PhpUnnecessaryLeadingBackslashInUseStatementInspection
+  - name: PhpUnnecessaryParenthesesInspection
+  - name: PhpVariableVariableInspection
+  - name: PhpVariableIsUsedOnlyInClosureInspection
+  - name: PhpComposerDuplicatedRequirementInspection
+  - name: PhpNotInstalledPackagesInspection
+  - name: CheckEmptyScriptTag
+  - name: HtmlUnknownBooleanAttribute
+  - name: CheckValidXmlInScriptTagBody
+  - name: CheckImageSize
+  - name: HtmlMissingClosingTag
+  - name: RequiredAttributes
+  - name: HtmlDeprecatedAttribute
+  - name: HtmlDeprecatedTag
+  - name: HtmlPresentationalElement
+  - name: HtmlExtraClosingTag
+  - name: HtmlUnknownAttribute
+  - name: HtmlUnknownTag
+  - name: HtmlWrongAttributeValue
+  - name: PhpAssignmentInConditionInspection
+  - name: JSIncompatibleTypesComparison
+  - name: JSComparisonWithNaN
+  - name: PhpConstantReassignmentInspection
+  - name: InfiniteLoopJS
+  - name: InfiniteRecursionJS
+  - name: PhpMissingBreakStatementInspection
+  - name: PhpStatementHasEmptyBodyInspection
+  - name: JSSuspiciousEqPlus
+  - name: PhpNonCompoundUseInspection
+  - name: PhpMissingVisibilityInspection
+  - name: PhpTraitsUseListInspection
+  - name: PhpModifierOrderInspection
+  - name: PhpLongTypeFormInspection
+  - name: PhpVarUsageInspection
+  - name: PhpCSFixerValidationInspection
