--- a/.env.exemple
+++ b/.env.exemple
@@ -1,6 +1,6 @@
-DB_DSN = mysql:host=localhost;port=3306;dbname=blog3
-DB_USER = root
-DB_PASSWORD = root
+DB_DSN = pgsql:host=172.17.0.1;port=5432;dbname=postgres
+DB_USER = postgres
+DB_PASSWORD = postgres
 
 GMAIL_HOST =
 GMAIL_PORT =
